#RI-5610 - fix text overlapping

--- a/redisinsight/ui/src/pages/autodiscover-cloud/redis-cloud-databases-result/styles.module.scss
+++ b/redisinsight/ui/src/pages/autodiscover-cloud/redis-cloud-databases-result/styles.module.scss
@@ -23,12 +23,6 @@
 
 .searchForm {
   width: 266px !important;
-
-  @media (min-width: 1130px) {
-    position: absolute;
-    right: 30px;
-    margin-top: -70px;
-  }
 }
 
 .table {
