--- a/redisinsight/ui/src/pages/autodiscover-sentinel/styles.module.scss
+++ b/redisinsight/ui/src/pages/autodiscover-sentinel/styles.module.scss
@@ -20,12 +20,6 @@
 
 .searchForm {
   width: 266px !important;
-
-  @media (min-width: 1180px) {
-    position: absolute;
-    right: 30px;
-    margin-top: -70px;
-  }
 }
 
 .search {
