--- a/redisinsight/ui/src/pages/redis-cluster/styles.module.scss
+++ b/redisinsight/ui/src/pages/redis-cluster/styles.module.scss
@@ -56,12 +56,6 @@ $breakpoint-to-wrap-buttons: 660px;
 
 .searchForm {
   width: 266px !important;
-
-  @media (min-width: 1130px) {
-    position: absolute;
-    right: 30px;
-    margin-top: -70px;
-  }
 }
 
 .search {
